--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=belajar-spring-async
+spring.task.execution.pool.core-size=2
+spring.task.execution.pool.max-size=2
+spring.task.execution.pool.queue-capacity=100
+
+
+spring.task.scheduling.pool.size=10
+spring.task.scheduling.thread-name-prefix=my-scheduler-
+
+
